--- a/index.html
+++ b/index.html
@@ -1,124 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>北京益富露升网络传媒</title>
-    <link rel="stylesheet" href="static/css/global.css">
-    <link rel="stylesheet" href="static/css/plugins/swiper.min.css">
-    <link rel="stylesheet" href="static/css/index.css">
-    <script src="static/js/global.js"></script>
-    <script src="static/js/plugins/jquery-1.8.3.min.js"></script>
-    <script src="static/js/plugins/swiper.min.js"></script>
+  <meta charset="UTF-8">
+  <title>北京益富露升网络传媒</title>
+  <link rel="stylesheet" href="static/css/global.css">
+  <link rel="stylesheet" href="static/css/plugins/swiper.min.css">
+  <link rel="stylesheet" href="static/css/index.css">
+  <script src="static/js/global.js"></script>
+  <script src="static/js/plugins/jquery-1.8.3.min.js"></script>
+  <script src="static/js/plugins/swiper.min.js"></script>
 </head>
 <body>
-    <div class="headerBox">
-        <div class="header float_clear">
-            <div class="float-l headerLogo">
-                <img src="http://www.dyhjw.com/Public/v2/images/global/logo.png" alt="logo">
-            </div>
-            <a href="">
-                <div class="float-r headerItem">
-                    <span class="headerText">加入我们</span>
-                    <div class="headerBorder"></div>
-                </div>
-            </a>
-            <a href="">
-                <div class="float-r headerItem">
-                    <span class="headerText">公司动态</span>
-                    <div class="headerBorder"></div>
-                    <div class="headerCategoriesBox">
-                        <a href="">
-                            <div class="headerCategoriesItem">
-                                <span>公司动态</span>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="headerCategoriesItem">
-                                <span>产品信息</span>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="headerCategoriesItem">
-                                <span>员工风采</span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </a>
-            <a href="">
-                <div class="float-r headerItem">
-                    <span class="headerText">产品展示</span>
-                    <div class="headerBorder"></div>
-                </div>
-            </a>
-            <a href="">
-                <div class="float-r headerItem">
-                    <span class="headerText">主营方向</span>
-                    <div class="headerBorder"></div>
-                </div>
-            </a>
-            <a href="">
-                <div class="float-r headerItem">
-                    <span class="headerText">关于我们</span>
-                    <div class="headerBorder"></div>
-                    <div class="headerCategoriesBox">
-                        <a href="">
-                            <div class="headerCategoriesItem">
-                                <span>企业介绍</span>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="headerCategoriesItem">
-                                <span>团队介绍</span>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="headerCategoriesItem">
-                                <span>发展历程</span>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="headerCategoriesItem">
-                                <span>合作伙伴</span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </a>
-            <a href="">
-                <div class="float-r headerItem headerOn">
-                    <span class="headerText">主页</span>
-                    <div class="headerBorder"></div>
-                </div>
-            </a>
-        </div>
+<div class="headerBox">
+  <div class="header float_clear">
+    <div class="float-l headerLogo">
+      <img src="http://www.dyhjw.com/Public/v2/images/global/logo.png" alt="logo">
     </div>
-    <div class="indexSwiperBox">
-        <div class="swiper-container" style="height: 100%;width: 100%;">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img class="indexSwiperImg" src="static/image/indexBg1.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img class="indexSwiperImg" src="static/image/indexBg1.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img class="indexSwiperImg" src="static/image/indexBg1.png" alt="">
-                </div>
+    <a href="">
+      <div class="float-r headerItem">
+        <span class="headerText">加入我们</span>
+        <div class="headerBorder"></div>
+      </div>
+    </a>
+    <a href="">
+      <div class="float-r headerItem">
+        <span class="headerText">公司动态</span>
+        <div class="headerBorder"></div>
+        <div class="headerCategoriesBox">
+          <a href="">
+            <div class="headerCategoriesItem">
+              <span>公司动态</span>
             </div>
-            <!-- 如果需要分页器 -->
-            <div class="pagination"></div>
+          </a>
+          <a href="">
+            <div class="headerCategoriesItem">
+              <span>产品信息</span>
+            </div>
+          </a>
+          <a href="">
+            <div class="headerCategoriesItem">
+              <span>员工风采</span>
+            </div>
+          </a>
         </div>
+      </div>
+    </a>
+    <a href="">
+      <div class="float-r headerItem">
+        <span class="headerText">产品展示</span>
+        <div class="headerBorder"></div>
+      </div>
+    </a>
+    <a href="">
+      <div class="float-r headerItem">
+        <span class="headerText">主营方向</span>
+        <div class="headerBorder"></div>
+      </div>
+    </a>
+    <a href="">
+      <div class="float-r headerItem">
+        <span class="headerText">关于我们</span>
+        <div class="headerBorder"></div>
+        <div class="headerCategoriesBox">
+          <a href="">
+            <div class="headerCategoriesItem">
+              <span>企业介绍</span>
+            </div>
+          </a>
+          <a href="">
+            <div class="headerCategoriesItem">
+              <span>团队介绍</span>
+            </div>
+          </a>
+          <a href="">
+            <div class="headerCategoriesItem">
+              <span>发展历程</span>
+            </div>
+          </a>
+          <a href="">
+            <div class="headerCategoriesItem">
+              <span>合作伙伴</span>
+            </div>
+          </a>
+        </div>
+      </div>
+    </a>
+    <a href="">
+      <div class="float-r headerItem headerOn">
+        <span class="headerText">主页</span>
+        <div class="headerBorder"></div>
+      </div>
+    </a>
+  </div>
+</div>
+<div class="indexSwiperBox">
+  <div class="swiper-container" style="height: 100%;width: 100%;">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide" style="background: url(static/image/indexBg1.png) no-repeat center center">
+      </div>
+      <div class="swiper-slide" style="background: url(static/image/indexBg1.png) no-repeat center center">
+      </div>
+      <div class="swiper-slide" style="background: url(static/image/indexBg1.png) no-repeat center center">
+      </div>
     </div>
-    <script>
-        $(document).ready(function () {
-            var indexSwiper = new Swiper('.swiper-container', {
-                loop: true,
-                autoplay: 30000,
-                pagination: '.pagination',
-                autoplayDisableOnInteraction:false
-            });
-        })
-    </script>
+    <!-- 如果需要分页器 -->
+    <div class="pagination"></div>
+  </div>
+</div>
+<script>
+  $(document).ready(function () {
+    var indexSwiper = new Swiper('.swiper-container', {
+      loop: true,
+      autoplay: 30000,
+      pagination: '.pagination',
+      paginationClickable: true,
+      autoplayDisableOnInteraction: false
+    });
+  })
+</script>
 </body>
 </html>
