添加加入我们页面，招聘列表页，修改代码，修改公共css代码，

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="float-l headerLogo">
       <img src="http://www.dyhjw.com/Public/v2/images/global/logo.png" alt="logo">
     </div>
-    <a href="">
+    <a href="join_us.html">
       <div class="float-r headerItem">
         <span class="headerText">加入我们</span>
         <div class="headerBorder"></div>
@@ -45,7 +45,7 @@
         </div>
       </div>
     </a>
-    <a href="">
+    <a href="product.html">
       <div class="float-r headerItem">
         <span class="headerText">产品展示</span>
         <div class="headerBorder"></div>
@@ -57,7 +57,7 @@
         <div class="headerBorder"></div>
       </div>
     </a>
-    <a href="">
+    <a href="about_us.html">
       <div class="float-r headerItem">
         <span class="headerText">关于我们</span>
         <div class="headerBorder"></div>
