--- a/product.html
+++ b/product.html
@@ -99,6 +99,12 @@
       <p>
         第一黄金网是国内知名的黄金投资专业资讯网站,为用户提供专业的黄金投资资讯。相较于同行业的其它资讯网站，本网站拥有更为专业的运营团队、更为熟练的分析团队和更为专业的技术团队，让我们的服务兼具国际化视野，竭心尽力为黄金投资者的财富之旅保驾护航。
       </p>
+      <p>
+        第一黄金网是国内知名的黄金投资专业资讯网站,为用户提供专业的黄金投资资讯。相较于同行业的其它资讯网站，本网站拥有更为专业的运营团队、更为熟练的分析团队和更为专业的技术团队，让我们的服务兼具国际化视野，竭心尽力为黄金投资者的财富之旅保驾护航。
+      </p>
+      <p>
+        第一黄金网是国内知名的黄金投资专业资讯网站,为用户提供专业的黄金投资资讯。相较于同行业的其它资讯网站，本网站拥有更为专业的运营团队、更为熟练的分析团队和更为专业的技术团队，让我们的服务兼具国际化视野，竭心尽力为黄金投资者的财富之旅保驾护航。
+      </p>
     </div>
   </div>
 </div>
