添加加入我们页面，招聘列表页，修改代码，修改公共css代码，

--- a/join_list1.html
+++ b/join_list1.html
@@ -95,14 +95,14 @@
   <div class="banner"></div>
   <div class="join_listBox">
     <div class="join_title float_clear">
-      <a href="" class="title1 active">研发技术及运营类岗位</a>
-      <a href="" class="title2">视频及动画制作类岗位</a>
+      <a href="#" class="title1 active">研发技术及运营类岗位</a>
+      <a href="join_list2.html" class="title2">视频及动画制作类岗位</a>
     </div>
     <table class="join_listMain">
       <tr class="join_listTitle">
         <td>岗位</td>
-        <td>职责描述</td>
-        <td>职位要求</td>
+        <td style="width: 472px">职责描述</td>
+        <td style="width: 472px">职位要求</td>
       </tr>
       <tr>
         <td>产品经理</td>
