--- a/join_list2.html
+++ b/join_list2.html
@@ -95,68 +95,109 @@
   <div class="banner"></div>
   <div class="join_listBox">
     <div class="join_title float_clear">
-      <a href="" class="title1 active">研发技术及运营类岗位</a>
-      <a href="" class="title2">视频及动画制作类岗位</a>
+      <a href="join_list1.html" class="title1">研发技术及运营类岗位</a>
+      <a href="#" class="title2 active">视频及动画制作类岗位</a>
     </div>
     <table class="join_listMain">
       <tr class="join_listTitle">
         <td>岗位</td>
-        <td>职责描述</td>
-        <td>职位要求</td>
+        <td style="width: 472px">职责描述</td>
+        <td style="width: 472px">职位要求</td>
       </tr>
       <tr>
-        <td>产品经理</td>
-        <td >
-          <p>1. 财经方向相关经验</p>
-          <p>2. 完成前期产品市场需求、同类产品市场资料的收集；</p>
-          <p>3. 根据产品需求，撰写详细的产品流程设计 文档、产品界面及原型设计文档；</p>
-          <p>4. 负责与开发人员、UI沟通，确保协作人员对产品文档有充分的理解；</p>
-          <p>5. 引导设计师完成产品的界面设计，协调开发人员进行开发工作，推动及协调产品的开发进度，把控项目质量；</p>
-          <p>6. 收集用户反馈，分析用户行为及需求，对产品进行持续的优化和改进；</p>
-          <p>7. 对产品数据进行监控，提供客户支持，提升整体产品的用户满意度；</p>
-          <p>8. 对数据进行分析和统计。</p>
+        <td>动画编导/导演</td>
+        <td>
+          <p>1、独立完成或配合策划人员项目前期策划与脚本大纲；</p>
+          <p>2、负责影片脚本创作，并通过组织和协调各方资源保障影片实施制作、预演；</p>
+          <p>3、负责影片的总体把控；</p>
+          <p>4、财经方向动画内容。</p>
         </td>
         <td>
-          <p>1、大专及以上学历，3年以上产品经理工作经验（财经方向）；</p>
-          <p>2、熟练掌握Excel/PPT/word/Visio/project/AXURE、RP等软件；</p>
-          <p> 3、对交互设计、用户界面有研究；</p>
-          <p>4、良好的学习能力、团队合作精神、分析判断能力、沟通协调能力，能适应无线互联网的工作压力。</p>
-        </td>
-      </tr>
-      <tr>
-        <td>PHP网络开发工程师</td>
-        <td>
-          <p>1、 负责产品技术框架设计、数据库设计；</p>
-          <p>2、负责网站核心代码书写，攻克技术难题；</p>
-          <p>3、参与项目需求分析，参与制定开发规范；</p>
-        </td>
-        <td>
-          <p>1. 计算机及相关专业，本科及以上学历；</p>
-          <p>2. 3年以上PHP开发经验，有大型互联网项目经验，有移动互联网开发经验者优先；</p>
-          <p>3. 具备扎实的PHP编程基础，良好的编程习惯；</p>
-          <p>4. 能够熟练使用ThinkPHP框架和node.js开发；</p>
-          <p>5. 精通数据库设计、精通SQL，熟练使用各种常用的数据结构；</p>
-          <p>6. 熟悉系统性能优化，了解系统架构；</p>
-          <p>7. 熟悉Unix/Linux系统，会使用基本的Shell命令；</p>
-          <p>8. 熟悉基本的网络协议，特别是需要熟悉有关于TCP/IP协议编程，以及socket、http等协议接口编程；</p>
-          <p>9. 熟悉HTML5，JavaScript，CSS3等Web前端技术</p>
+          <p>1、影视、动画编导相关专业、大专及大专以上学历，两年以上同职位工作经验；</p>
+          <p>2、熟练运用ps,pr,ae,3dmax等软件；</p>
+          <p>3、具有较高的艺术修养，具有独立导演能力，有较强的策划组织协调能力。良好的整体把控力，优秀的创作能力，对镜头语言的运用功底较强；</p>
+          <p>4、具有较高的艺术修养，富有创造力，优秀的视觉美感，具有良好的语言和文字表达能力；</p>
+          <p>5、对影视动画脚本、分镜、动画、配音、音乐音效、特效及后期整合均有丰富创作整合经验；</p>
+          <p>6、团队合作意识强，有强烈的责任感，人际沟通和交际，表达能力强，心态积极向上；</p>
         </td>
       </tr>
       <tr>
-        <td>要闻编辑</td>
+        <td>动画3d建模师</td>
         <td>
-          <p>1、负责第一黄金网金融资讯的收集与整理；</p>
-          <p>2、及时更新、不断调整所负责的频道和页面各个栏目，做好重点文章的整合工作；</p>
-          <p>3、及时制作和自己负责领域有关的热点事件专题；</p>
-          <p>4、充分了解用户需求，收集用户反馈，分析用户行为及需求；</p>
-          <p>5、完成领导交给的其他工作或任务；</p>
-          <p>6、每日完成10篇左右的文章。</p>
+          <p>1、根据方案，负责动画效果图中模型的建模和渲染；</p>
+          <p>2、与动画设计团队配合，参与设计稿的制作、3D造型等相关工作；</p>
+          <p>3、熟悉工艺，把控设计方案的效果与可行性；</p>
+          <p>4、上级领导安排的其它工作；</p>
+          <p>5、财经方向动画内容</p>
         </td>
         <td>
-          <p>1、 诚信务实，有着强烈进取心和成就事业的意识，有良好的学习能力。</p>
-          <p>2、 具备坚韧性、敬业精神、思维敏捷、细腻、严谨等精神；</p>
-          <p>3、 具备良好的沟通、组织，策划、决策、执行、协调能力；</p>
-          <p>4、 具有较强的文字表达和编辑能力；能够熟练地使用Microsoft Office办公软件；</p>
+          <p>1、景观设计、环境艺术设计、广告设计、展示设计或相关美术设计专业，大专及以上学历；</p>
+          <p>2、能熟练运用3DMax，或与3DMax互通的三维设计软件如犀牛、CINEMA 4D等，了解PS、CAD、AI等设计软件的使用；</p>
+          <p>3、能熟练运用各类三维设计软件进行物体建模、灯光渲染出图；</p>
+          <p>4、富有责任感及团队合作精神，谦虚、好学，能承受一定工作压力；</p>
+          <p>5、大专及大专以上学历，1-3年工作经验，动画专业，有相关设计类经验者优先。</p>
+        </td>
+      </tr>
+      <tr>
+        <td>动画手绘师/前期</td>
+        <td>
+          <p>1.移动端推广页面、海报、banner插画设计；</p>
+          <p>2.负责H5推广界面设计和插画设计；</p>
+          <p>3.财经方向动画内容。</p>
+        </td>
+        <td>
+          <p>1、丰富的视觉设计工作经验，有较强的视觉推广能力和插画工作经验；</p>
+          <p>2、精通PS、AI、sai、flash、painter等等设计绘画类软件；</p>
+          <p>3、擅长创意、策划，具备较强的美术功底和审美能力；</p>
+          <p>4、动画专业，有插画、手绘基础的可优先考虑；</p>
+          <p>5、大专及大专以上学历，1-3年工作经验。</p>
+
+        </td>
+      </tr>
+      <tr>
+        <td>后期制作</td>
+        <td>
+          <p>1、负责音频、视频内容的制作等；</p>
+          <p>2、配合协调团队直播拍摄执行工作，保障项目工作顺利完成；</p>
+          <p>3、参与策划新闻资讯类相关节目及录音、后期制作；</p>
+        </td>
+        <td>
+          <p>1、有独立完成制作节目方案的能力，提案能力强；</p>
+          <p>2、播音主持、电视节目制作、编导等专业优先选择；</p>
+          <p>3、具备良好的沟通、组织，策划、决策、执行、协调能力；</p>
+          <p>4、精通Premiere，AE，EDIUS等相关剪辑软件，能独立完成拍摄剪辑，以及新闻视频策划。</p>
+
+        </td>
+      </tr>
+      <tr>
+        <td>后期制作（动画特效）</td>
+        <td>
+          <p>1、参与完成动画剪辑和特效制作，包括2D与3D、MG动画；</p>
+          <p>2、负责产品的三维建模、材质渲染、动画合成；</p>
+          <p>3、财经方向动画内容。</p>
+        </td>
+        <td>
+          <p>1、熟练使用AE、C4D等动画及特效软件，擅长MG动画制作；</p>
+          <p>2、熟悉AI、PS等平面设计软件的基本操作；</p>
+          <p>3、熟练flash、3dmax、maya、pr等操作软件；</p>
+          <p>3、大专及大专以上学历，1-3年相关工作经验，专业不限，动画类、后期类专业优先。</p>
+
+        </td>
+      </tr>
+      <tr>
+        <td>动画配音师（男女不限）</td>
+        <td>
+          <p>1、负责公司内动画角色音色设计、录制；</p>
+          <p>2、整理配音脚本，编写配音方案；准确理解脚本，完成角色配音的录制任务；</p>
+          <p>3、与配音搭档分析与讨论相关故事情节、讨论配音角色的性格、心理以及思想感情，以合适的语调、语气，准确地表达感情；</p>
+          <p>4、财经方向动画内容。</p>
+        </td>
+        <td>
+          <p>1、大专及大专以上学历，配音、影视表演、播音主持专业。欢迎广大专业院校实习生，毕业生；</p>
+          <p>2、声线多变，能演会说，足够解放天性，十足情感创意；</p>
+          <p>3、熟悉Cool Edit、Adobe Audition、Cubase和其他一些音频编辑软件；</p>
+          <p>4、1-3年工作经验，具备动画配音等相关工作经验优先。</p>
+
         </td>
       </tr>
     </table>
