--- a/join_us.html
+++ b/join_us.html
@@ -99,11 +99,11 @@
         <img src=" static/image/join_banner.png" alt="">
       </div>
       <div class="swiper-slide">
-        <a href="#"></a>
+        <a href=" join_list1.html"></a>
         <img src="static/image/post1.png" alt="">
       </div>
       <div class="swiper-slide post2">
-        <a href="#"></a>
+        <a href="join_list2.html"></a>
         <img src="static/image/post2.png" alt="">
       </div>
     </div>
