添加加入新闻页面，招聘列表页，修改代码，修改公共css代码，

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </a>
     <a href="">
       <div class="float-r headerItem">
-        <span class="headerText">公司动态</span>
+       <span class="headerText">新闻动态</span>
         <div class="headerBorder"></div>
         <div class="headerCategoriesBox">
           <a href="">
