--- a/news_details.html
+++ b/news_details.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>加入我们</title>
+  <title>新闻详情</title>
   <link rel="stylesheet" href="static/css/global.css">
-  <link rel="stylesheet" href="static/css/plugins/swiper.min.css">
-  <link rel="stylesheet" href="static/css/join_us.css">
+  <link rel="stylesheet" href="static/css/news_details.css">
   <script src="static/js/global.js"></script>
   <script src="static/js/plugins/jquery-1.8.3.min.js"></script>
-  <script src="static/js/plugins/swiper.min.js"></script>
 </head>
 <body>
 <div class="headerBox">
@@ -16,14 +14,14 @@
     <div class="float-l headerLogo">
       <img src="http://www.dyhjw.com/Public/v2/images/global/logo.png" alt="logo">
     </div>
-    <a href="">
-      <div class="float-r headerItem headerOn">
+    <a href="join_us.html">
+      <div class="float-r headerItem">
         <span class="headerText">加入我们</span>
         <div class="headerBorder"></div>
       </div>
     </a>
     <a href="">
-      <div class="float-r headerItem">
+      <div class="float-r headerItem headerOn">
        <span class="headerText">新闻动态</span>
         <div class="headerBorder"></div>
         <div class="headerCategoriesBox">
@@ -45,19 +43,19 @@
         </div>
       </div>
     </a>
-    <a href="">
+    <a href="product.html">
       <div class="float-r headerItem">
         <span class="headerText">产品展示</span>
         <div class="headerBorder"></div>
       </div>
     </a>
     <a href="">
-      <div class="float-r headerItem">
+      <div class="float-r headerItem ">
         <span class="headerText">主营方向</span>
         <div class="headerBorder"></div>
       </div>
     </a>
-    <a href="">
+    <a href="about_us.html">
       <div class="float-r headerItem">
         <span class="headerText">关于我们</span>
         <div class="headerBorder"></div>
@@ -86,36 +84,27 @@
       </div>
     </a>
     <a href="">
-      <div class="float-r headerItem">
+      <div class="float-r headerItem ">
         <span class="headerText">主页</span>
         <div class="headerBorder"></div>
       </div>
     </a>
   </div>
 </div>
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide banner">
-        <img src=" static/image/join_banner.png" alt="">
-      </div>
-      <div class="swiper-slide">
-        <a href=" join_list1.html"></a>
-        <img src="static/image/post1.png" alt="">
-      </div>
-      <div class="swiper-slide post2">
-        <a href="join_list2.html"></a>
-        <img src="static/image/post2.png" alt="">
-      </div>
-    </div>
-    <div class="pagination"></div>
+<div class="news_mainBox">
+  <div class="banner"></div>
+  <div class="news_main">
+    <h1 class="news_title">特朗普乱枪扫向亚马逊 黄金烂泥难上墙</h1>
+    <p class="news_time">发布时间：2018-07-24    12:24</p>
+    <img src="static/image/test/news_image.png" alt="">
   </div>
-<script>
-  var mySwiper = new Swiper('.swiper-container',{
-    pagination: '.pagination',
-    paginationClickable: true,
-    mode: 'vertical',
-    mousewheelControl : true
-  })
-</script>
+  <!--公共底部-->
+  <div class="footer">
+    <div class="footer_main">
+      <p>公司名称：北京益富露升网络传媒科技有限公司</p>
+      <p>公司地点：北京市海淀区温泉镇中央图书馆西侧（原温泉镇农业服务中心办公楼）34号</p>
+    </div>
+  </div>
+</div>
 </body>
 </html>
