--- a/the_main.html
+++ b/the_main.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>加入我们</title>
+  <title>主营方向</title>
   <link rel="stylesheet" href="static/css/global.css">
-  <link rel="stylesheet" href="static/css/plugins/swiper.min.css">
-  <link rel="stylesheet" href="static/css/join_us.css">
+  <link rel="stylesheet" href="static/css/the_main.css">
   <script src="static/js/global.js"></script>
   <script src="static/js/plugins/jquery-1.8.3.min.js"></script>
-  <script src="static/js/plugins/swiper.min.js"></script>
 </head>
 <body>
 <div class="headerBox">
@@ -16,8 +14,8 @@
     <div class="float-l headerLogo">
       <img src="http://www.dyhjw.com/Public/v2/images/global/logo.png" alt="logo">
     </div>
-    <a href="">
-      <div class="float-r headerItem headerOn">
+    <a href="join_us.html">
+      <div class="float-r headerItem">
         <span class="headerText">加入我们</span>
         <div class="headerBorder"></div>
       </div>
@@ -45,19 +43,19 @@
         </div>
       </div>
     </a>
-    <a href="">
+    <a href="product.html">
       <div class="float-r headerItem">
         <span class="headerText">产品展示</span>
         <div class="headerBorder"></div>
       </div>
     </a>
     <a href="">
-      <div class="float-r headerItem">
+      <div class="float-r headerItem headerOn">
         <span class="headerText">主营方向</span>
         <div class="headerBorder"></div>
       </div>
     </a>
-    <a href="">
+    <a href="about_us.html">
       <div class="float-r headerItem">
         <span class="headerText">关于我们</span>
         <div class="headerBorder"></div>
@@ -86,36 +84,52 @@
       </div>
     </a>
     <a href="">
-      <div class="float-r headerItem">
+      <div class="float-r headerItem ">
         <span class="headerText">主页</span>
         <div class="headerBorder"></div>
       </div>
     </a>
   </div>
 </div>
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide banner">
-        <img src=" static/image/join_banner.png" alt="">
-      </div>
-      <div class="swiper-slide">
-        <a href=" join_list1.html"></a>
-        <img src="static/image/post1.png" alt="">
-      </div>
-      <div class="swiper-slide post2">
-        <a href="join_list2.html"></a>
-        <img src="static/image/post2.png" alt="">
+<div class="the_main">
+  <div class="banner"></div>
+  <div class="the_mainList float_clear">
+    <div class="item">
+      <img src="static/image/luca-bravo-217276-unsplash(1).png" alt="">
+      <div class="maskBox">
+          <div class="maskMian">
+            <h2>网站设计与开发</h2>
+            <p>我们用设计和用户体验来提升贵企业的 品牌竞争力。良好的网站设计、优良的用户体验是我们对用户的承诺与保证。</p>
+          </div>
       </div>
     </div>
-    <div class="pagination"></div>
+    <div class="item">
+      <img src="static/image/stock-iphone-business-mobile-38629.png" alt="">
+      <div class="maskBox">
+        <div class="maskMian">
+          <h2>手机APP开发</h2>
+          <p>我们专注为各行业提供行之有效的APP管理 系统</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <img src="static/image/pexels-photo-860379.png" alt="">
+      <div class="maskBox">
+        <div class="maskMian">
+          <h2>新媒体资讯服务</h2>
+          <p>我们致力于为用户提供“最新、最快、最全、最值得信赖”的互联网信息及资讯服务。</p>
+        </div>
+      </div>
+    </div>
   </div>
-<script>
-  var mySwiper = new Swiper('.swiper-container',{
-    pagination: '.pagination',
-    paginationClickable: true,
-    mode: 'vertical',
-    mousewheelControl : true
-  })
-</script>
+  <!--公共底部-->
+  <div class="footer">
+    <div class="footer_main">
+      <p>公司名称：北京益富露升网络传媒科技有限公司</p>
+      <p>公司地点：北京市海淀区温泉镇中央图书馆西侧（原温泉镇农业服务中心办公楼）34号</p>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
