--- a/about_us.html
+++ b/about_us.html
@@ -12,7 +12,7 @@
 <div class="headerBox">
   <div class="header float_clear">
     <div class="float-l headerLogo">
-      <img src="http://www.dyhjw.com/Public/v2/images/global/logo.png" alt="logo">
+      <img src="static/image/logo.png" alt="logo">
     </div>
     <a href="">
       <div class="float-r headerItem">
@@ -60,24 +60,19 @@
         <span class="headerText">关于我们</span>
         <div class="headerBorder"></div>
         <div class="headerCategoriesBox">
-          <a href="">
+          <a href="about_us.html#qy">
             <div class="headerCategoriesItem">
               <span>企业介绍</span>
             </div>
           </a>
-          <a href="">
+          <a href="about_us.html#team">
             <div class="headerCategoriesItem">
               <span>团队介绍</span>
             </div>
           </a>
-          <a href="">
+          <a href="about_us.html#relation">
             <div class="headerCategoriesItem">
-              <span>发展历程</span>
-            </div>
-          </a>
-          <a href="">
-            <div class="headerCategoriesItem">
-              <span>合作伙伴</span>
+              <span>联系我们</span>
             </div>
           </a>
         </div>
@@ -94,6 +89,7 @@
 <div class="banner"></div>
 <!--企业介绍-->
 <div class="qy_referral">
+  <a name="qy"></a>
   <div class="qy_main">
     <div class="qy_img1">
       <img src="static/image/icon_perch2.png" alt="">
@@ -120,6 +116,7 @@
 </div>
 <!--团队介绍-->
 <div class="team_referral">
+  <a name="team"></a>
   <div class="team_main">
     <div class="team_list float_clear">
       <div class="team_item ">
@@ -157,6 +154,7 @@
 </div>
 <!--联系我们-->
 <div class="contact_us">
+  <a name="relation"></a>
   <div class="contact_us_main">
     <div class="map"></div>
     <div class="company float_clear">
