--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="headerBox">
   <div class="header float_clear">
     <div class="float-l headerLogo">
-      <img src="http://www.dyhjw.com/Public/v2/images/global/logo.png" alt="logo">
+      <img src="static/image/logo.png" alt="logo">
     </div>
     <a href="join_us.html">
       <div class="float-r headerItem">
